--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ You can help by:</p>
       </div>
 
       <div class="team-member" style="background:#f9f8ff;width:300px;padding:20px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.08);">
-        <img src="images/robert-s.jpg" alt="Robert Sanogo" style="width:100%;height:250px;object-fit:cover;border-radius:10px;">
+        <img src="images/robert-s.JPG" alt="Robert Sanogo" style="width:100%;height:250px;object-fit:cover;border-radius:10px;">
         <h3 style="color:#4c3f91;margin:12px 0 6px 0;">Robert Sanogo</h3>
         <p style="color:#555;font-size:0.95em;"> <strong>Supyire Specialist</strong><br><br>A native Supyire speaker, Robert specializes in lexicography and text analysis. He is pursuing graduate studies in Linguistics at AIU, with full commitment to this project through its completion in <strong>2032</strong>.</p>
       </div>
@@ -882,4 +882,5 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
