--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ Since 1990, both the lexical and text collection work has been carried out with 
     <p>The current lexical database is in a computer program called Toolbox, developed by SIL. This database needs to be regularized, corrected, and enhanced with more and better example sentences.
 After thorough revision, the database must be transferred to another program, FLEx, also developed by SIL. From FLEx, the Supyire-French and Supyire-English dictionaries can be printed, and apps for smartphones can be created. The phone apps will be made available at no or very low cost.</p>
     <div class="center" style="margin-top:18px;">
-      <strong>Example of a toolbox database</strong><br>
+      <strong>Example of alexical entry</strong><br>
       <img src="images/entry on kakɔɔn.jpg" alt="Example Text" style="width:60%;max-width:700px;border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.15);">
     </div>
   </section>
@@ -266,7 +266,7 @@ After thorough revision, the database must be transferred to another program, FL
 Selected texts will be formatted, annotated, translated and made available online for research. The annotations will be both linguistic and cultural.
 Our goal is to make available online a collection of texts number at least 500,000 words.</p>
     <div class="center" style="margin-top:16px;">
-      <strong>Example of a text</strong><br>
+      <strong>Example of a proverb</strong><br>
       <img src="images/screenshot of a proverb.jpg" alt="Example" style="width:700px;max-width:100%;border-radius:12px;display:block;margin:auto;">
     </div>
   </section>
@@ -882,5 +882,6 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
